# riscv-simulator

./: .gitignore  CMakeLists.txt  COMMANDS.md  Doxyfile  LICENSE  Makefile  README.md  demo.cpp
.github/workflows/: release.yml
Jsons/: list.txt  main_no_error.json
docs/html/: CHANGELOG_8md.html  CMakeCXXCompilerId_8cpp.html  COMMANDS_8md.html  README_8md.html  RiscV__Siumlator_8dir_2src_2assembler_2assembler_8cpp_8o_8d.html  RiscV__Siumlator_8dir_2src_2assembler_2code__generator_8cpp_8o_8d.html  RiscV__Siumlator_8dir_2src_2assembler_2errors_8cpp_8o_8d.html  RiscV__Siumlator_8dir_2src_2assembler_2instructions_8cpp_8o_8d.html  RiscV__Siumlator_8dir_2src_2assembler_2lexer_8cpp_8o_8d.html  RiscV__Siumlator_8dir_2src_2assembler_2parser_8cpp_8o_8d.html  RiscV__Siumlator_8dir_2src_2assembler_2tokens_8cpp_8o_8d.html  RiscV__Siumlator_8dir_2src_2config_8cpp_8o_8d.html  RiscV__Siumlator_8dir_2src_2globals_8cpp_8o_8d.html  RiscV__Siumlator_8dir_2src_2utils_8cpp_8o_8d.html  RiscV__Siumlator_8dir_2src_2vm_2alu_8cpp_8o_8d.html  RiscV__Siumlator_8dir_2src_2vm_2cache_2cache_8cpp_8o_8d.html  RiscV__Siumlator_8dir_2src_2vm_2control__unit__base_8cpp_8o_8d.html  RiscV__Siumlator_8dir_2src_2vm_2main__memory_8cpp_8o_8d.html  RiscV__Siumlator_8dir_2src_2vm_2memory__controller_8cpp_8o_8d.html  RiscV__Siumlator_8dir_2src_2vm_2registers_8cpp_8o_8d.html  RiscV__Siumlator_8dir_2src_2vm_2rvss_2rvss__control__unit_8cpp_8o_8d.html  RiscV__Siumlator_8dir_2src_2vm_2rvss_2rvss__vm_8cpp_8o_8d.html  RiscV__Siumlator_8dir_2src_2vm_2vm__base_8cpp_8o_8d.html  RiscV__Siumlator_8dir_2src_2vm__asm__mw_8cpp_8o_8d.html  RiscV__Siumlator_8dir_2src_2vm__runner_8cpp_8o_8d.html  TODO_8md.html  alu_8cpp.html  alu_8cpp__incl.map  alu_8cpp__incl.md5  alu_8h.html  alu_8h__dep__incl.map  alu_8h__dep__incl.md5  alu_8h__incl.map  alu_8h__incl.md5  alu_8h_source.html  annotated.html  assembler_8cpp.html  assembler_8cpp__incl.dot  assembler_8cpp__incl.map  assembler_8cpp__incl.md5  (+828 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+103 more)
docs/latex/: CMakeCXXCompilerId_8cpp.tex  COMMANDS_8md.tex  RiscV__Siumlator_8dir_2src_2assembler_2assembler_8cpp_8o_8d.tex  RiscV__Siumlator_8dir_2src_2assembler_2code__generator_8cpp_8o_8d.tex  RiscV__Siumlator_8dir_2src_2assembler_2errors_8cpp_8o_8d.tex  RiscV__Siumlator_8dir_2src_2assembler_2instructions_8cpp_8o_8d.tex  RiscV__Siumlator_8dir_2src_2assembler_2lexer_8cpp_8o_8d.tex  RiscV__Siumlator_8dir_2src_2assembler_2parser_8cpp_8o_8d.tex  RiscV__Siumlator_8dir_2src_2assembler_2tokens_8cpp_8o_8d.tex  RiscV__Siumlator_8dir_2src_2config_8cpp_8o_8d.tex  RiscV__Siumlator_8dir_2src_2globals_8cpp_8o_8d.tex  RiscV__Siumlator_8dir_2src_2utils_8cpp_8o_8d.tex  RiscV__Siumlator_8dir_2src_2vm_2alu_8cpp_8o_8d.tex  RiscV__Siumlator_8dir_2src_2vm_2cache_2cache_8cpp_8o_8d.tex  RiscV__Siumlator_8dir_2src_2vm_2control__unit__base_8cpp_8o_8d.tex  RiscV__Siumlator_8dir_2src_2vm_2main__memory_8cpp_8o_8d.tex  RiscV__Siumlator_8dir_2src_2vm_2memory__controller_8cpp_8o_8d.tex  RiscV__Siumlator_8dir_2src_2vm_2registers_8cpp_8o_8d.tex  RiscV__Siumlator_8dir_2src_2vm_2rvss_2rvss__control__unit_8cpp_8o_8d.tex  RiscV__Siumlator_8dir_2src_2vm_2rvss_2rvss__vm_8cpp_8o_8d.tex  RiscV__Siumlator_8dir_2src_2vm_2vm__base_8cpp_8o_8d.tex  RiscV__Siumlator_8dir_2src_2vm__asm__mw_8cpp_8o_8d.tex  RiscV__Siumlator_8dir_2src_2vm__runner_8cpp_8o_8d.tex  alu_8cpp.tex  alu_8cpp__incl.md5  alu_8h.tex  alu_8h__dep__incl.md5  alu_8h__incl.md5  annotated.tex  assembler_8cpp.tex  assembler_8cpp.tex.tmp  assembler_8cpp__incl.dot  assembler_8cpp__incl.md5  assembler_8h.tex  assembler_8h__dep__incl.dot  assembler_8h__dep__incl.md5  assembler_8h__incl.dot  assembler_8h__incl.md5  build_2CMakeFiles_23_822_81_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.tex  cache_8cpp.tex  (+391 more)
examples/: bigmul_test.s  branch_test.s  e1.elf  e1.s  e2.s  e3.s  e4.s  ee1.s  error_test.s  f_d_test.s  f_test.s  ftest.s  gcd_1.s  jal_test.s  jalr_test.s  load_store_test_1.s  load_store_test_2.s  load_test.s  load_test_2.s  lui_auipc_test.s  ntest1.s  pseudo.s  syscall.s  test  test.c  test.s  test.txt  test1.s  test2.s
examples/vm_state/: config.ini  disassembly.txt  errors_dump.json  memory_dump.json  registers_dump.json  vm_state_dump.json
include/: command_handler.h  config.h  globals.h  utils.h  vm_asm_mw.h  vm_runner.h
include/assembler/: assembler.h  code_generator.h  elf_util.h  errors.h  lexer.h  parser.h
include/common/: instructions.h
include/vm/: alu.h  bigmul_unit.h  control_unit_base.h  main_memory.h  memory_controller.h  registers.h  vm_base.h
include/vm/cache/: cache.h
src/: command_handler.cpp  command_handler.h  command_parser.cpp  command_parser.h  config.cpp  config.h  globals.cpp  globals.h  main.cpp  main.h  memory.cpp  memory.h  pch.h  registers.cpp  registers.h  utils.cpp  utils.h  vm_asm_mw.cpp  vm_asm_mw.h  vm_runner.h
src/assembler/: assembler.cpp  assembler.h  code_generator.cpp  code_generator.h  elf_util.cpp  elf_util.h  errors.cpp  errors.h  instructions.cpp  instructions.h  lexer.cpp  lexer.h  parser.cpp  parser.h  tokens.cpp  tokens.h
src/common/: instructions.cpp  instructions.h  rounding_modes.h
src/rvss/: vm.cpp  vm.h
src/vm/: alu.cpp  alu.h  bigmul_unit.cpp  control_unit_base.cpp  control_unit_base.h  main_memory.cpp  main_memory.h  memory_controller.cpp  memory_controller.h  memory_unit.cpp  memory_unit.h  registers.cpp  registers.h  vm_base.cpp  vm_base.h
test/: Makefile  test.cpp  test_alu.cpp  test_config.cpp  test_elf_util.cpp  test_main.cpp  test_memory.cpp  test_vm.cpp  testex
vm_state/: config.ini  errors_dump.json  memory_dump.json  registers_dump.json  vm_state_dump.json
(+12 files in other folders)
